# rust-estoque

./: README.md  dados.db  lista_compras.csv  lista_compras.txt
programa/: .env  Cargo.toml  dados.db  dados.db-shm  dados.db-wal
programa/migrations/: 1grupos.sql  2produtos.sql  3listacompras.sql
programa/src/: compras.rs  db.rs  main.rs  produtos.rs
