[package]
name = "estoque"
version = "1.0.1"
authors = ["Eduardo <eduardovitorerv@gmail.com>", "Ricardo <ricardodarocha@outlook.com>"]
edition = "2021"
description = "Controle de estoque do Eduardo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
